# algo-trading-system

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.cfg  config.ini  database.yaml  docker-compose.yaml  logging.yaml  pg_backup.sh  pyproject.toml  requirements.txt  settings.py  setup.sh  talib.sh
Exceptions/: BinanceSpotFiatException.py  BinanceSpotMarginException.py  BinanceSpotMarketException.py  TaLibBaseException.py
Exchanges/: ExchangesInterface.py
Exchanges/Binance/: BinanceInterface.py
ExchangesAPI/Binance/: BinanceSpotMarket.py  __init__.py
Strategy/: DualSMA.py  MACDBase.py  StrategyTester.py
Strategy/StrategyLogs/: DualSMA__1h__2023_03_01__2023_04_04.json
TaLib/: TAInterface.py  test.py
TaLib/Modules/: CycleIndicators.py  MathOperators.py  MathTransform.py  MomentumIndicators.py  OverlapStudies.py  PatternRecognition.py  PriceTransform.py  StatisticFunctions.py  VolatilityIndicators.py  VolumeIndicators.py
Test/: test_BinanceSpotMarket.py  test_MomentumIndicators.py
app/: Redis.py  alembic.ini  config.ini  main.py  settings.py  setup_logger.py  test.py
app/API/: handlers.py  models.py
app/BinanceAPI/: binanceAPI.py  binanceSpot.py
app/BinanceSDK/: BinanceSpotMarket.py  SpotMarketInterface.py
app/DB/: dals.py  session.py
app/Exceptions/: BinanceSpotMarketException.py  TaLibBaseException.py  __init__.py
app/Logger/: Logger.py  __init__.py  logger.py
app/TaLib/: StrategyTester.py  TABase.py  TAInterface.py  test.py
app/migrations/: env.py
src/: TaLib.cpp  data.txt  main.cpp
webclient/: package.json
(+54 files in other folders)
